Bug 175829 - aggregation profiles with threading: perfect only crash kmail
Summary: aggregation profiles with threading: perfect only crash kmail
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords:
: 175887 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-11-22 18:28 UTC by S. Burmeister
Modified: 2008-11-23 15:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2008-11-22 18:28:08 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

If one changes a profile to use Threading: perfect only and that profile is the active one, kmail crashes when clicking OK in the aggregation's configure dialogue.

If it is not the active, kmail crashes when switching to it.

Anwendung: Kontact (kontact), Signal SIGABRT
0x00007f9adbe0f261 in nanosleep () from /lib64/libc.so.6

Thread 1 (Thread 0x7f9ae3955700 (LWP 9083)):
[KCrash Handler]
#5  0x00007f9adbd9f5c5 in raise () from /lib64/libc.so.6
#6  0x00007f9adbda0bb3 in abort () from /lib64/libc.so.6
#7  0x00007f9adcab2375 in qt_message_output (msgType=QtFatalMsg, buf=<value optimized out>) at global/qglobal.cpp:2102
#8  0x00007f9adcab24bd in qFatal (msg=<value optimized out>) at global/qglobal.cpp:2303
#9  0x00007f9adcab252a in qt_assert (assertion=0x237b <Address 0x237b out of bounds>, file=0x6 <Address 0x6 out of bounds>, line=-1) at global/qglobal.cpp:1872
#10 0x00007f9acb922b76 in KMail::MessageListView::Core::Model::guessMessageParent (this=0xe3dd10, mi=0x137fdf0) at /home/kde-devel/kde/src/KDE/kdepim/kmail/messagelistview/core/model.cpp:1534
#11 0x00007f9acb92a400 in KMail::MessageListView::Core::Model::viewItemJobStepInternalForJobPass3 (this=0xe3dd10, job=0x14b8690, tStart=@0x7fffeb9a2f10)
    at /home/kde-devel/kde/src/KDE/kdepim/kmail/messagelistview/core/model.cpp:2345
#12 0x00007f9acb92c96e in KMail::MessageListView::Core::Model::viewItemJobStepInternalForJob (this=0xe3dd10, job=0x14b8690, tStart=@0x7fffeb9a2f10)
    at /home/kde-devel/kde/src/KDE/kdepim/kmail/messagelistview/core/model.cpp:3261
#13 0x00007f9acb92cf35 in KMail::MessageListView::Core::Model::viewItemJobStepInternal (this=0xe3dd10) at /home/kde-devel/kde/src/KDE/kdepim/kmail/messagelistview/core/model.cpp:3366
#14 0x00007f9acb92de68 in KMail::MessageListView::Core::Model::viewItemJobStep (this=0xe3dd10) at /home/kde-devel/kde/src/KDE/kdepim/kmail/messagelistview/core/model.cpp:3525
#15 0x00007f9acb92edff in KMail::MessageListView::Core::Model::setStorageModel (this=0xe3dd10, storageModel=<value optimized out>, 
    preSelectionMode=KMail::MessageListView::Core::PreSelectLastSelected) at /home/kde-devel/kde/src/KDE/kdepim/kmail/messagelistview/core/model.cpp:794
#16 0x00007f9acb955141 in KMail::MessageListView::Core::View::setStorageModel (this=0xe37640, storageModel=0x237b, preSelectionMode=6)
    at /home/kde-devel/kde/src/KDE/kdepim/kmail/messagelistview/core/view.cpp:155
#17 0x00007f9acb95de56 in KMail::MessageListView::Core::Widget::aggregationSelected (this=0xe25fd0) at /home/kde-devel/kde/src/KDE/kdepim/kmail/messagelistview/core/widgetbase.cpp:515
#18 0x00007f9acb4d3f64 in KMail::MessageListView::Core::Widget::qt_metacall (this=0xe25fd0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffeb9a3570)
    at /home/kde-devel/kde/build/KDE/kdepim/kmail/moc_widgetbase.cpp:108
#19 0x00007f9acb4d4255 in KMail::MessageListView::Widget::qt_metacall (this=0x237b, _c=9083, _id=6, _a=0xffffffffffffffff) at /home/kde-devel/kde/build/KDE/kdepim/kmail/moc_widget.cpp:74
#20 0x00007f9adcbb7284 in QMetaObject::activate (sender=0x11d60c0, from_signal_index=<value optimized out>, to_signal_index=6, argv=0xffffffffffffffff) at kernel/qobject.cpp:3031
#21 0x00007f9add9724f7 in QAction::triggered (this=0x237b, _t1=true) at .moc/release-shared/moc_qaction.cpp:216
#22 0x00007f9add972cc0 in QAction::activate (this=0x11d60c0, event=<value optimized out>) at kernel/qaction.cpp:1125
#23 0x00007f9addd0b9dd in QMenuPrivate::activateAction (this=0xe34ba0, action=0x11d60c0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1002
#24 0x00007f9ade844e91 in KMenu::mouseReleaseEvent (this=0xe335a0, e=0x237b) at /home/kde-devel/kde/src/KDE/kdelibs/kdeui/widgets/kmenu.cpp:452
#25 0x00007f9add9ca999 in QWidget::event (this=0x237b, event=0x7fffeb9a3fe0) at kernel/qwidget.cpp:7163
#26 0x00007f9addd0e1db in QMenu::event (this=0xe335a0, e=0x7fffeb9a3fe0) at widgets/qmenu.cpp:2265
#27 0x00007f9add97817d in QApplicationPrivate::notify_helper (this=0x62c1d0, receiver=0xe335a0, e=0x7fffeb9a3fe0) at kernel/qapplication.cpp:3803
#28 0x00007f9add98079a in QApplication::notify (this=<value optimized out>, receiver=0xe335a0, e=0x7fffeb9a3fe0) at kernel/qapplication.cpp:3528
#29 0x00007f9ade76f31b in KApplication::notify (this=0x7fffeb9a6880, receiver=0xe335a0, event=0x7fffeb9a3fe0) at /home/kde-devel/kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:307
#30 0x00007f9adcba2e81 in QCoreApplication::notifyInternal (this=0x7fffeb9a6880, receiver=0xe335a0, event=0x7fffeb9a3fe0) at kernel/qcoreapplication.cpp:587
#31 0x00007f9add97fb38 in QApplicationPrivate::sendMouseEvent (receiver=0xe335a0, event=0x7fffeb9a3fe0, alienWidget=0x0, nativeWidget=0xe335a0, buttonDown=<value optimized out>, 
    lastMouseReceiver=@0x7f9ade2f5760) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:212
#32 0x00007f9add9e4414 in QETWidget::translateMouseEvent (this=0xe335a0, event=<value optimized out>) at kernel/qapplication_x11.cpp:3974
#33 0x00007f9add9e2c77 in QApplication::x11ProcessEvent (this=0x1a6, event=0x7fffeb9a4a60) at kernel/qapplication_x11.cpp:3158
#34 0x00007f9adda0955c in x11EventSourceDispatch (s=0x62f850, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:142
#35 0x00007f9ad7b7393a in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#36 0x00007f9ad7b77040 in ?? () from /usr/lib64/libglib-2.0.so.0
#37 0x00007f9ad7b771dc in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#38 0x00007f9adcbcb3af in QEventDispatcherGlib::processEvents (this=0x62aa40, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:319
#39 0x00007f9adda08ccf in QGuiEventDispatcherGlib::processEvents (this=0x237b, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:198
#40 0x00007f9adcba1782 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -342209200}) at kernel/qeventloop.cpp:143
#41 0x00007f9adcba190d in QEventLoop::exec (this=0x7fffeb9a4d90, flags={i = -342209104}) at kernel/qeventloop.cpp:194
#42 0x00007f9addd0e035 in QMenu::exec (this=<value optimized out>, p=@0x7fffeb9a4f50, action=0x0) at widgets/qmenu.cpp:1938
#43 0x00007f9addd4e359 in QToolButtonPrivate::popupTimerDone (this=0xe34300) at widgets/qtoolbutton.cpp:905
#44 0x00007f9addd4ec41 in QToolButton::qt_metacall (this=0xe335e0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffeb9a5090) at .moc/release-shared/moc_qtoolbutton.cpp:107
#45 0x00007f9adcbb7284 in QMetaObject::activate (sender=0xe335e0, from_signal_index=<value optimized out>, to_signal_index=27, argv=0xffffffffffffffff) at kernel/qobject.cpp:3031
#46 0x00007f9addc82b2e in QAbstractButtonPrivate::emitPressed (this=0xe34300) at widgets/qabstractbutton.cpp:552
#47 0x00007f9addc82d03 in QAbstractButton::mousePressEvent (this=0xe335e0, e=0x7fffeb9a5920) at widgets/qabstractbutton.cpp:1087
#48 0x00007f9addd4f273 in QToolButton::mousePressEvent (this=0xe335e0, e=0x7fffeb9a5920) at widgets/qtoolbutton.cpp:662
#49 0x00007f9add9ca97f in QWidget::event (this=0x237b, event=0x7fffeb9a5920) at kernel/qwidget.cpp:7159
#50 0x00007f9add97817d in QApplicationPrivate::notify_helper (this=0x62c1d0, receiver=0xe335e0, e=0x7fffeb9a5920) at kernel/qapplication.cpp:3803
#51 0x00007f9add98079a in QApplication::notify (this=<value optimized out>, receiver=0xe335e0, e=0x7fffeb9a5920) at kernel/qapplication.cpp:3528
#52 0x00007f9ade76f31b in KApplication::notify (this=0x7fffeb9a6880, receiver=0xe335e0, event=0x7fffeb9a5920) at /home/kde-devel/kde/src/KDE/kdelibs/kdeui/kernel/kapplication.cpp:307
#53 0x00007f9adcba2e81 in QCoreApplication::notifyInternal (this=0x7fffeb9a6880, receiver=0xe335e0, event=0x7fffeb9a5920) at kernel/qcoreapplication.cpp:587
#54 0x00007f9add97fb38 in QApplicationPrivate::sendMouseEvent (receiver=0xe335e0, event=0x7fffeb9a5920, alienWidget=0xe335e0, nativeWidget=0x72d5b0, buttonDown=<value optimized out>, 
    lastMouseReceiver=@0x7f9ade2f5760) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:212
#55 0x00007f9add9e4259 in QETWidget::translateMouseEvent (this=0x72d5b0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4040
#56 0x00007f9add9e2c77 in QApplication::x11ProcessEvent (this=0x1a6, event=0x7fffeb9a63a0) at kernel/qapplication_x11.cpp:3158
#57 0x00007f9adda0955c in x11EventSourceDispatch (s=0x62f850, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:142
#58 0x00007f9ad7b7393a in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#59 0x00007f9ad7b77040 in ?? () from /usr/lib64/libglib-2.0.so.0
#60 0x00007f9ad7b771dc in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#61 0x00007f9adcbcb3af in QEventDispatcherGlib::processEvents (this=0x62aa40, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:319
#62 0x00007f9adda08ccf in QGuiEventDispatcherGlib::processEvents (this=0x237b, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:198
#63 0x00007f9adcba1782 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -342202736}) at kernel/qeventloop.cpp:143
#64 0x00007f9adcba190d in QEventLoop::exec (this=0x7fffeb9a66d0, flags={i = -342202656}) at kernel/qeventloop.cpp:194
#65 0x00007f9adcba3dfd in QCoreApplication::exec () at kernel/qcoreapplication.cpp:845
#66 0x0000000000404a61 in main (argc=3, argv=0x7fffeb9a6e58) at /home/kde-devel/kde/src/KDE/kdepim/kontact/src/main.cpp:218
Comment 1 Szymon Stefanek 2008-11-22 20:52:22 UTC
SVN commit 887765 by stefanek:

When "perfect only" threading is requested, don't attempt to call guessMessageParent().

BUG: 175829



 M  +8 -2      model.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=887765
Comment 2 Thomas McGuire 2008-11-23 15:49:06 UTC
*** Bug 175887 has been marked as a duplicate of this bug. ***