When "perfect only" threading is requested, don't attempt to call guessMessageParent().

BUG: 175829


svn path=/trunk/KDE/kdepim/; revision=887765